some progress, client side stuff
